--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>NAKANOTANI's home page</title>
 <link rel="stylesheet" href="style.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="./sherlock.png">
+<link rel="apple-touch-icon" sizes="180x180" href="sherlock.png">
 
 </head>
 
