--- a/publications.html
+++ b/publications.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=Shift_JIS" />
-<meta name="keywords" content="ƒƒCƒ“‚ÌƒL[ƒ[ƒh" />
-<meta name="description" content="Ð‰î•¶‚É‚Â‚¢‚Ä" />
+<meta name="keywords" content="ãƒ¡ã‚¤ãƒ³ã®ã‚­ãƒ¼ãƒ¯ãƒ¼ãƒ‰" />
+<meta name="description" content="ç´¹ä»‹æ–‡ã«ã¤ã„ã¦" />
 <title>NAKANOTANI's home page</title>
 <link rel="stylesheet" href="style.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico">
@@ -11,12 +11,12 @@
 
 <body>
 
-<!-- ƒƒCƒ“ƒRƒ“ƒeƒ“ƒc•”•ª -->
+<!-- ãƒ¡ã‚¤ãƒ³ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† -->
 
 <div id="main">
 
 
-<!-- ƒƒCƒ“ƒwƒbƒ_[•”•ª -->
+<!-- ãƒ¡ã‚¤ãƒ³ãƒ˜ãƒƒãƒ€ãƒ¼éƒ¨åˆ† -->
 
 <div id="header">
   <div id="header-inner">
@@ -31,12 +31,12 @@
   </div>
 </div>
 
-<!-- ƒƒCƒ“ƒwƒbƒ_[I‚í‚è -->
+<!-- ãƒ¡ã‚¤ãƒ³ãƒ˜ãƒƒãƒ€ãƒ¼çµ‚ã‚ã‚Š -->
 
 
-<!-- ƒgƒbƒvƒRƒ“ƒeƒ“ƒc•”•ª -->
+<!-- ãƒˆãƒƒãƒ—ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† -->
 
-<!-- ƒRƒ“ƒeƒ“ƒc“à•” -->
+<!-- ã‚³ãƒ³ãƒ†ãƒ³ãƒ„å†…éƒ¨ -->
 
 
 
@@ -47,12 +47,56 @@
 <h2>Publications</h2>
 
 <p>
-<ol>
-<li>"Diffusive shock acceleration of cosmic rays from two stationary shocks"</li>
-M. Nakanotani, T. Hada, and S. Matsukiyo<br> <a href="https://earth-planets-space.springeropen.com/articles/10.1186/s40623-018-0799-3">Earth, Planets and Space, Volume 70, Number 1, February 2018</a>
-<li>"Electromagnetic Structure and Electron Acceleration in Shock-Shock Interaction"</li>
-M. Nakanotani, S. Matsukiyo, T. Hada, C. Mazelle<br> <a href="http://iopscience.iop.org/article/10.3847/1538-4357/aa8363">The Astrophysical Journal, Volume 846, Issue 2, article id. 113, 7 pp. (2017)</a>
-<li>"Full Particle-In-Cell simulation of two colliding shocks"</li>M. Nakanotani, S. Matsukiyo, T. Hada,<br> <a href="http://journals.jps.jp/doi/abs/10.7566/JPSCP.1.015103">Proceedings of The 12th Asia Pacific Physics Conference,JPS Conf. Proc.,1,015103, 2014</a>
+<ol>          
+
+<p><li>"Pickup Ion-Madiated Magnetic Reconnection in the Outer Heliosphere"</li>
+<u><b>M. Nakanotani</b></u>, L. L. Zhao, G. P. Zank<br> <a href="https://iopscience.iop.org/article/10.3847/2041-8213/acd33f" target="_blank"> The Astrophysical Journal Letters, Volume 949, 1, May 2023</a></p>
+
+
+<p><li>"Phase Coherence of Solar Wind Turbulence from the Sun to Earth"</li>
+<u><b>M. Nakanotani</b></u>, L. L. Zhao, G. P. Zank<br> <a href="https://www.frontiersin.org/articles/10.3389/fspas.2023.1161939/full" target="_blank"> Frontiers in Astronomy and Space Sciences, Volume 10, Apr 2023</a></p>
+
+<p><li>"Particle Acceleration in an MHD-scale System of Multiple Current Sheets"</li>
+<u><b>M. Nakanotani</b></u>, G. P. Zank, L. L. Zhao<br><a href="https://www.frontiersin.org/articles/10.3389/fspas.2022.954040/full?&utm_source=Email_to_authors_&utm_medium=Email&utm_content=T1_11.5e1_author&utm_campaign=Email_publication&field=&journalName=Frontiers_in_Astronomy_and_Space_Sciences&id=954040" target="_blank"> Frontiers in Astronomy and Space Sciences, Volume 9, Aug 2022</a></p>
+
+<p><li>"Collisional Magnetized Shock Waves: 1D Full Particle-In-Cell Simulations"</li>
+<u><b>M. Nakanotani</b></u>, R. P. Camata, R. R. Arslanbekov, G. P. Zank<br><a href="https://journals.aps.org/pre/abstract/10.1103/PhysRevE.105.045209" target="_blank"> Physical Review E, Volume 105, 045209, Apr 2022</a></p>
+
+<p><li>"Turbulence Dominated Shock Waves: 2D Hybrid Kinetic Simulations"</li>
+<u><b>M. Nakanotani</b></u>, G. P. Zank,  L. L. Zhao<br> <a href="https://iopscience.iop.org/article/10.3847/1538-4357/ac4781" target="_blank">The Astrophysical Journal, Volume 926, 109, Feb 2022</a></p>
+
+<p><li>"Interaction between Multiple Current Sheets and a Shock Wave: 2D Hybrid Kinetic Simulations"</li>
+<u><b>M. Nakanotani</b></u>, G. P. Zank,  L. L. Zhao<br> <a href="https://iopscience.iop.org/article/10.3847/1538-4357/ac2e06" target="_blank">The Astrophysical Journal, Volume 922, 219, Dec 2021</a></p>
+
+<p><li>"Flux Ropes, Turbulence, and Collisionless Perpendicular Shock Waves: High Plasma Beta Case"</li>
+G. P. Zank, <u><b>M. Nakanotani</b></u>, L. L. Zhao, S. Du, L. Adhikari, H. Che, and J. A. le Roux<br> <a href="https://iopscience.iop.org/article/10.3847/1538-4357/abf7c8/meta" target="_blank">The Astrophysical Journal, Volume 913, Number 2, June 2021</a></p>
+
+<p><li>"Hybrid Simulations of Interstellar Pickup Protons Accelerated at the Solar-wind Termination Shock at Multiple Locations"</li>
+J. Giacalone, <u><b>M. Nakanotani</b></u>, G. P. Zank, J. KÃ²ta, M. Opher, and J. D. Richardson<br> <a href="https://iopscience.iop.org/article/10.3847/1538-4357/abe93a/meta" target="_blank">The Astrophysical Journal, Volume 911, Number 1, April 2021</a></p>
+
+<p><li>"The Origin of Switchbacks in the Solar Corona: Linear Theory"</li>
+G. P. Zank, <u><b>M. Nakanotani</b></u>, L.-L. Zhao, L. Adhikari, and J. Kasper<br> <a href="https://iopscience.iop.org/article/10.3847/1538-4357/abb828/meta" target="_blank">The Astrophysical Journal, Volume 903, Number 1, October 2020</a></p>
+
+<p><li>"The Downwind Solar Wind: Model Comparison with Pioneer 10 Observations"</li>
+<u><b>M. Nakanotani</b></u>, G. P. Zank, L. Adhikari, L.-L. Zhao, J. Giacalone, M. Opher, and J. D. Richardson<br> <a href="https://iopscience.iop.org/article/10.3847/2041-8213/abb81e/meta" target="_blank">The Astrophysical Journal, Volume 901, Number 2, September 2020</a></p>
+
+<p><li>"Spectral Anisotropy in 2D plus Slab Magnetohydrodynamic Turbulence in the Solar Wind and Upper Corona"</li>
+G. P. Zank, <u><b>M. Nakanotani</b></u>, L.-L. Zhao, L. Adhikari, and D. Telloni<br> <a href="https://iopscience.iop.org/article/10.3847/1538-4357/abad30/meta" target="_blank">The Astrophysical Journal, Volume 900, Number 2, September 2020</a></p>
+
+<p><li>"The Interaction of Current Sheets with a Shock Wave and Particle Acceleration"</li>
+<u><b>M. Nakanotani</b></u>, G. P. Zank and L.-L. Zhao<br> <a href="https://iopscience.iop.org/article/10.1088/1742-6596/1620/1/012014/meta" target="_blank">Journal of Physics: Conference Series, Volume 1620, 19th Annual International Astrophysics Conference 9-13 March 2020 in Santa Fe, New Mexico, USA, 2020</a></p>
+
+<p><li>"Compressible and Incompressible Magnetic Turbulence Observed in the Very Local Interstellar Medium by Voyager 1"</li>
+G. P. Zank, <u><b>M. Nakanotani</b></u>, and G. M. Webb<br> <a href="https://iopscience.iop.org/article/10.3847/1538-4357/ab528c/meta" target="_blank">The Astrophysical Journal, Volume 887, Number 2, Decemnber 2019</a></p>
+              
+<p><li>"Diffusive shock acceleration of cosmic rays from two stationary shocks"</li>
+<u><b>M. Nakanotani</b></u>, T. Hada, and S. Matsukiyo<br> <a href="https://earth-planets-space.springeropen.com/articles/10.1186/s40623-018-0799-3" target="_blank">Earth, Planets and Space, Volume 70, Number 1, February 2018</a></p>
+
+<p><li>"Electromagnetic Structure and Electron Acceleration in Shock-Shock Interaction"</li>
+<u><b>M. Nakanotani</b></u>, S. Matsukiyo, T. Hada, C. Mazelle<br> <a href="http://iopscience.iop.org/article/10.3847/1538-4357/aa8363" target="_blank">The Astrophysical Journal, Volume 846, Issue 2, article id. 113, 7 pp. (2017)</a></p>
+
+<p><li>"Full Particle-In-Cell simulation of two colliding shocks"</li>
+<u><b>M. Nakanotani</b></u>, S. Matsukiyo, T. Hada,<br> <a href="http://journals.jps.jp/doi/abs/10.7566/JPSCP.1.015103" target="_blank">Proceedings of The 12th Asia Pacific Physics Conference,JPS Conf. Proc.,1,015103, 2014</a></p>
 </ol>
 </p>
 
@@ -71,9 +115,9 @@ M. Nakanotani, S. Matsukiyo, T. Hada, C. Mazelle<br> <a href="http://iopscience.
 
   </div>
 
-<!-- ƒRƒ“ƒeƒ“Ec“à•” I‚í‚è -->
+<!-- ã‚³ãƒ³ãƒ†ãƒ³ãƒ»cå†…éƒ¨ çµ‚ã‚ã‚Š -->
 
-<!-- ƒTƒCƒhƒƒjƒ…[•”•ª -->
+<!-- ã‚µã‚¤ãƒ‰ãƒ¡ãƒ‹ãƒ¥ãƒ¼éƒ¨åˆ† -->
 
   <div id="menu">
 
@@ -89,23 +133,23 @@ Publications<br />
 
   </div>
 
-<!-- ƒTƒCƒhƒƒjƒ…[•”•ª I‚í‚è -->
+<!-- ã‚µã‚¤ãƒ‰ãƒ¡ãƒ‹ãƒ¥ãƒ¼éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
 </div>
 
-<!-- ƒgƒbƒvƒRƒ“ƒeƒ“ƒc•”•ª I‚í‚è -->
+<!-- ãƒˆãƒƒãƒ—ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
-<!-- ƒtƒbƒ^[•”•ª -->
+<!-- ãƒ•ãƒƒã‚¿ãƒ¼éƒ¨åˆ† -->
 
 <div id="footer">
 Copyright (C) 2015 Masaru NAKANOTANI's Homepage All Rights Reserved.  design by <a href="http://simptemp.com">SimpTemp</a>
 </div>
 
-<!-- ƒtƒbƒ^[•”•ª I‚í‚è -->
+<!-- ãƒ•ãƒƒã‚¿ãƒ¼éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
 </div>
 
-<!-- ƒƒCƒ“ƒRƒ“ƒeƒ“ƒc•”•ª I‚í‚è -->
+<!-- ãƒ¡ã‚¤ãƒ³ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
 </body>
 </html>
