--- a/slide.html
+++ b/slide.html
@@ -7,8 +7,15 @@
 <title>NAKANOTANI's home page</title>
 <link rel="stylesheet" href="style.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico">
-</head>
+<style type="text/css">
+ <!--
 
+         a       { text-decoration:none;}
+         a:hover { text-decoration:underline;}
+
+ -->
+ </style>
+</head>
 <body>
 
 <!-- メインコンテンツ部分 -->
@@ -43,24 +50,21 @@
 <div id="container">
   <div id="contents">
 
+<h2>Slide</h2>
+<p>
+ 
+<li><a href="slide/Rinko20180126.slides.html" target="_blank">
+<font size=3>Rinko20180126</font></a></li>
 
-<h2>Welcome!</h2>
 
-          <p style="font-size: 15px;">It is said that 99 percent of matter in the Universe (exception of dark matter and dark energy) is plasma. 
-      Plasma is a state in which there are positive charged ions and negative charged electrons. 
-      In space, there are innumerable stars which are in the state of extremely high temperature like the sun. 
-      They emit plasma in space, then space is filled with plasma. 
-      So the space plasma physics is important for understanding the Universe. 
-      <br/>I'm interested in particle acceleration in space plasma. 
-      The most important problem in astrophysics is how are cosmic rays (high energy particles) created. 
-      Currently, it is though that they are created and accelerated at collisionless shock waves occurred in collisionles plasma. </p>
+</p>
+
+<p></p>
 
 <br />
 
-<h2>Updating Information</h2>
-<p>
-            Feb/06/2021 <a href="memo/plotting_tips.html" target="_blank">plotting tips</a> has been uploaded.<br />
-</p>
+
+<br />
 
   </div>
 
@@ -72,14 +76,13 @@
 
    <h2>Menu</h2>
    <p>
-Home<br />
-<a href="profile.html">Profile</a><br />
-<a href="research_topics.html">Reserch Topics</a><br />
-<a href="publications.html">Publications</a><br />
-<a href="memo.html">Memo</a><br />
-<!--
-<a href="diary.html">Diary</a><br />
--->
+<a href="index.html"  style="text-decoration:underline">Home</a><br />
+<a href="profile.html" style="text-decoration:underline">Profile</a><br />
+<a href="research_topics.html" style="text-decoration:underline">Reserch Topics</a><br />
+<a href="publications.html" style="text-decoration:underline">Publications</a><br />
+<a href="idea.html" style="text-decoration:underline">Idea</a><br />
+Slide<br />
+
    </p>
 
   </div>
