--- a/profile.html
+++ b/profile.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=Shift_JIS" />
-<meta name="keywords" content="ƒƒCƒ“‚ÌƒL[ƒ[ƒh" />
-<meta name="description" content="Ð‰î•¶‚É‚Â‚¢‚Ä" />
+<meta name="keywords" content="ãƒ¡ã‚¤ãƒ³ã®ã‚­ãƒ¼ãƒ¯ãƒ¼ãƒ‰" />
+<meta name="description" content="ç´¹ä»‹æ–‡ã«ã¤ã„ã¦" />
 <title>NAKANOTANI's home page</title>
 <link rel="stylesheet" href="style.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico">
@@ -11,12 +11,12 @@
 
 <body>
 
-<!-- ƒƒCƒ“ƒRƒ“ƒeƒ“ƒc•”•ª -->
+<!-- ãƒ¡ã‚¤ãƒ³ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† -->
 
 <div id="main">
 
 
-<!-- ƒƒCƒ“ƒwƒbƒ_[•”•ª -->
+<!-- ãƒ¡ã‚¤ãƒ³ãƒ˜ãƒƒãƒ€ãƒ¼éƒ¨åˆ† -->
 
 <div id="header">
   <div id="header-inner">
@@ -31,12 +31,12 @@
   </div>
 </div>
 
-<!-- ƒƒCƒ“ƒwƒbƒ_[I‚í‚è -->
+<!-- ãƒ¡ã‚¤ãƒ³ãƒ˜ãƒƒãƒ€ãƒ¼çµ‚ã‚ã‚Š -->
 
 
-<!-- ƒgƒbƒvƒRƒ“ƒeƒ“ƒc•”•ª -->
+<!-- ãƒˆãƒƒãƒ—ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† -->
 
-<!-- ƒRƒ“ƒeƒ“ƒc“à•” -->
+<!-- ã‚³ãƒ³ãƒ†ãƒ³ãƒ„å†…éƒ¨ -->
 
 
 
@@ -68,19 +68,20 @@ mn0052(at)uah.edu
 
 <tr>
 <th>Affiliation</th>
-<td><li>Center for Space Plasma and Aeronomic Research (CSPAR), University of Alabama in Huntsville,  USA
+<td><li>Center for Space Plasma and Aeronomic Research (CSPAR), University of Alabama in Huntsville, USA (Sep 2018 to today)
 <br><li>Dept. of Earth System Science and Technology, Interdisciplinary Graduate
-School of Engineering Sciences, Kyushu University, Japan (April 2014 to September 2018)
+School of Engineering Sciences, Kyushu University, Japan (Apr 2014 to Aug 2018)
 <br>
-<li>IRAP, University Toulouse III Paus Sabatier, France (June 2015 to April 2016)
+<li>IRAP, University Toulouse III Paus Sabatier, France (Jun 2015 to Apr 2016)
 
 </tr>
 
 <tr>
 <th>Academy</th>
-<td><li><tb2>Society of Geomagnetism and Earth, Planetary and Space Sciences(SGEPSS)</tb2>
-<li>Japan Geoscience Union(JpGU)
-<li>Europian Geophysical Union(EGU)
+<td><li><tb2>Society of Geomagnetism and Earth, Planetary and Space Sciences (SGEPSS)</tb2>
+<li>Japan Geoscience Union (JpGU)
+<li>Europian Geophysical Union (EGU)
+<li>American Geophysical Union (AGU)
 </td>
 </tr>
 
@@ -101,9 +102,9 @@ School of Engineering Sciences, Kyushu University, Japan (April 2014 to Septembe
 
   </div>
 
-<!-- ƒRƒ“ƒeƒ“Ec“à•” I‚í‚è -->
+<!-- ã‚³ãƒ³ãƒ†ãƒ³ãƒ»cå†…éƒ¨ çµ‚ã‚ã‚Š -->
 
-<!-- ƒTƒCƒhƒƒjƒ…[•”•ª -->
+<!-- ã‚µã‚¤ãƒ‰ãƒ¡ãƒ‹ãƒ¥ãƒ¼éƒ¨åˆ† -->
 
   <div id="menu">
 
@@ -119,23 +120,23 @@ Profile<br />
 
   </div>
 
-<!-- ƒTƒCƒhƒƒjƒ…[•”•ª I‚í‚è -->
+<!-- ã‚µã‚¤ãƒ‰ãƒ¡ãƒ‹ãƒ¥ãƒ¼éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
 </div>
 
-<!-- ƒgƒbƒvƒRƒ“ƒeƒ“ƒc•”•ª I‚í‚è -->
+<!-- ãƒˆãƒƒãƒ—ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
-<!-- ƒtƒbƒ^[•”•ª -->
+<!-- ãƒ•ãƒƒã‚¿ãƒ¼éƒ¨åˆ† -->
 
 <div id="footer">
 Copyright (C) 2015 Masaru NAKANOTANI's Homepage All Rights Reserved.  design by <a href="http://simptemp.com">SimpTemp</a>
 </div>
 
-<!-- ƒtƒbƒ^[•”•ª I‚í‚è -->
+<!-- ãƒ•ãƒƒã‚¿ãƒ¼éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
 </div>
 
-<!-- ƒƒCƒ“ƒRƒ“ƒeƒ“ƒc•”•ª I‚í‚è -->
+<!-- ãƒ¡ã‚¤ãƒ³ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
 </body>
 </html>
