--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,8 @@
 <h2>Publications</h2>
 
 <p>
-<ol>          
+<ol>
+<a href="https://scholar.google.com/citations?user=rzeKInkAAAAJ&hl=en&oi=ao" target="_blank"> test </a>
 
 <p><li>"Pickup Ion-Madiated Magnetic Reconnection in the Outer Heliosphere"</li>
 <u><b>M. Nakanotani</b></u>, L. L. Zhao, G. P. Zank<br> <a href="https://iopscience.iop.org/article/10.3847/2041-8213/acd33f" target="_blank"> The Astrophysical Journal Letters, Volume 949, 1, May 2023</a></p>
