--- a/memo.html
+++ b/memo.html
@@ -51,7 +51,7 @@
   <div id="contents">
 
 <h2>Memo</h2>
-These posts are put here as a reminder of mine. You can use them for your own sake. However, be careful to use them (there could be bugs or mistakes).<br>
+These posts are reminders for myself. You can also use them for your own sake, but, please be careful for errors or bugs that may be hidden inside a post.<br>
 <p>
 <h3>Vlasov & Full PIC Simulation</h3>
     <li><a href="memo/Vlasov_1D1V.html" target="_blank"   >
