--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,7 @@
 
 <p>
 <ol>
-You can also check<a href="https://scholar.google.com/citations?user=rzeKInkAAAAJ&hl=en&oi=ao" target="_blank"> my Google Scholar page</a>.
+You can also check<a href="https://scholar.google.com/citations?user=rzeKInkAAAAJ&hl=en&oi=ao" target="_blank"> <font size="3"> my Google Scholar page</font></a>.
 
 <p><li>"Pickup Ion-Madiated Magnetic Reconnection in the Outer Heliosphere"</li>
 <u><b>M. Nakanotani</b></u>, L. L. Zhao, G. P. Zank<br> <a href="https://iopscience.iop.org/article/10.3847/2041-8213/acd33f" target="_blank"> The Astrophysical Journal Letters, Volume 949, 1, May 2023</a></p>
