--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=Shift_JIS" />
-<meta name="keywords" content="ƒƒCƒ“‚ÌƒL[ƒ[ƒh" />
-<meta name="description" content="Ð‰î•¶‚É‚Â‚¢‚Ä" />
+<meta name="keywords" content="ãƒ¡ã‚¤ãƒ³ã®ã‚­ãƒ¼ãƒ¯ãƒ¼ãƒ‰" />
+<meta name="description" content="ç´¹ä»‹æ–‡ã«ã¤ã„ã¦" />
 <title>NAKANOTANI's home page</title>
 <link rel="stylesheet" href="style.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico">
@@ -11,12 +11,12 @@
 
 <body>
 
-<!-- ƒƒCƒ“ƒRƒ“ƒeƒ“ƒc•”•ª -->
+<!-- ãƒ¡ã‚¤ãƒ³ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† -->
 
 <div id="main">
 
 
-<!-- ƒƒCƒ“ƒwƒbƒ_[•”•ª -->
+<!-- ãƒ¡ã‚¤ãƒ³ãƒ˜ãƒƒãƒ€ãƒ¼éƒ¨åˆ† -->
 
 <div id="header">
   <div id="header-inner">
@@ -31,12 +31,12 @@
   </div>
 </div>
 
-<!-- ƒƒCƒ“ƒwƒbƒ_[I‚í‚è -->
+<!-- ãƒ¡ã‚¤ãƒ³ãƒ˜ãƒƒãƒ€ãƒ¼çµ‚ã‚ã‚Š -->
 
 
-<!-- ƒgƒbƒvƒRƒ“ƒeƒ“ƒc•”•ª -->
+<!-- ãƒˆãƒƒãƒ—ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† -->
 
-<!-- ƒRƒ“ƒeƒ“ƒc“à•” -->
+<!-- ã‚³ãƒ³ãƒ†ãƒ³ãƒ„å†…éƒ¨ -->
 
 
 
@@ -46,15 +46,29 @@
 
 <h2>Welcome!</h2>
 
-          <p style="font-size: 15px;">It is said that 99 percent of matter in the Universe (exception of dark matter and dark energy) is plasma. 
+<p style="font-size: 15px;">
+  Hi! I'm Masaru Nakanotani, a research scientist in CSPAR at the University of Alabama in Huntsville. 
+  My research interest is computational space plasma physcs, especially, turbulence, magnetic reconnection, and shock waves.
+  Plasma is the fourth state of matter which contains positive and negative charged particles and they interact through electromagnetic fields.
+  The plasma physics can be described by the combination of the Boltzmann equation and Maxwell's equations as the first principle.
+  Since we need to consider a distribution function of plasma in six dimensions for the above system, it is quite hard to solve analytically and expensive computationally.
+  To reduce the difficulty, we take a moment of the Boltzmann equation and obtain several type of fluid (or hybrid) equations.
+  Therefore, we can view space plasma phenomenon from several aspects and scales, and it makes the space plasma physics rich.
+  is required to be familiar to multiple fields of physics; statistics, hydrodynamics, electromagnetism, thermodynamics, and nonlinear dynamics.  
+
+  <!--
+  The sun is our nearest source of plasma, and the blown plasma is called the solar wind.
+  The solar wind interacts with the local interstellar medium and forms the heliosphere. 
+  It is said that 99 percent of matter in the Universe (exception of dark matter and dark energy) is plasma. 
       Plasma is a state in which there are positive charged ions and negative charged electrons. 
       In space, there are innumerable stars which are in the state of extremely high temperature like the sun. 
       They emit plasma in space, then space is filled with plasma. 
       So the space plasma physics is important for understanding the Universe. 
       <br/>I'm interested in particle acceleration in space plasma. 
       The most important problem in astrophysics is how are cosmic rays (high energy particles) created. 
-      Currently, it is though that they are created and accelerated at collisionless shock waves occurred in collisionles plasma. </p>
-
+      Currently, it is though that they are created and accelerated at collisionless shock waves occurred in collisionles plasma.
+  -->
+</p>
 <br />
 
 <h2>Updating Information</h2>
@@ -64,9 +78,9 @@
 
   </div>
 
-<!-- ƒRƒ“ƒeƒ“Ec“à•” I‚í‚è -->
+<!-- ã‚³ãƒ³ãƒ†ãƒ³ãƒ»cå†…éƒ¨ çµ‚ã‚ã‚Š -->
 
-<!-- ƒTƒCƒhƒƒjƒ…[•”•ª -->
+<!-- ã‚µã‚¤ãƒ‰ãƒ¡ãƒ‹ãƒ¥ãƒ¼éƒ¨åˆ† -->
 
   <div id="menu">
 
@@ -84,23 +98,23 @@ Home<br />
 
   </div>
 
-<!-- ƒTƒCƒhƒƒjƒ…[•”•ª I‚í‚è -->
+<!-- ã‚µã‚¤ãƒ‰ãƒ¡ãƒ‹ãƒ¥ãƒ¼éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
 </div>
 
-<!-- ƒgƒbƒvƒRƒ“ƒeƒ“ƒc•”•ª I‚í‚è -->
+<!-- ãƒˆãƒƒãƒ—ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
-<!-- ƒtƒbƒ^[•”•ª -->
+<!-- ãƒ•ãƒƒã‚¿ãƒ¼éƒ¨åˆ† -->
 
 <div id="footer">
 Copyright (C) 2015 Masaru NAKANOTANI's Homepage All Rights Reserved.  design by <a href="http://simptemp.com">SimpTemp</a>
 </div>
 
-<!-- ƒtƒbƒ^[•”•ª I‚í‚è -->
+<!-- ãƒ•ãƒƒã‚¿ãƒ¼éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
 </div>
 
-<!-- ƒƒCƒ“ƒRƒ“ƒeƒ“ƒc•”•ª I‚í‚è -->
+<!-- ãƒ¡ã‚¤ãƒ³ã‚³ãƒ³ãƒ†ãƒ³ãƒ„éƒ¨åˆ† çµ‚ã‚ã‚Š -->
 
 </body>
 </html>
