--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 
 <p style="font-size: 15px;">
   Hi! I'm Masaru Nakanotani, a research scientist in CSPAR at the University of Alabama in Huntsville. 
-  My research interest is computational space plasma physcs, especially, turbulence, magnetic reconnection, and shock waves.
+  My research interest is computational space plasma physics, especially, turbulence, magnetic reconnection, and shock waves.
   Plasma is the fourth state of matter which contains positive and negative charged particles and they interact through electromagnetic fields.
-  The plasma physics can be described by the combination of the Boltzmann equation and Maxwell's equations as the first principle.
+  A plasma dynamics can be described by the combination of the Boltzmann equation and Maxwell's equations as the first principle.
   Since we need to consider a distribution function of plasma in six dimensions for the above system, it is quite hard to solve analytically and expensive computationally.
   To reduce the difficulty, we take a moment of the Boltzmann equation and obtain several type of fluid (or hybrid) equations.
   Therefore, we can view space plasma phenomenon from several aspects and scales, and it makes the space plasma physics rich.
-  is required to be familiar to multiple fields of physics; statistics, hydrodynamics, electromagnetism, thermodynamics, and nonlinear dynamics.  
 
   <!--
+  is required to be familiar to multiple fields of physics; statistics, hydrodynamics, electromagnetism, thermodynamics, and nonlinear dynamics.  
   The sun is our nearest source of plasma, and the blown plasma is called the solar wind.
   The solar wind interacts with the local interstellar medium and forms the heliosphere. 
   It is said that 99 percent of matter in the Universe (exception of dark matter and dark energy) is plasma. 
