--- a/publications.html
+++ b/publications.html
@@ -103,16 +103,13 @@ G. P. Zank, <u><b>M. Nakanotani</b></u>, and G. M. Webb<br> <a href="https://iop
 
 <br />
 
-<h2>International Presentations</h2>
+<h2>Presentations</h2>
 
 <p>
 </p>
 
 <br />
 
-<h2>National Presentations</h2>
-<p>
-</p>
 
   </div>
 
